--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/index/index.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/index/index.html
@@ -80,7 +80,8 @@
         menuProp:{
         	id:"menuIndex",
         	label:"name",
-        	children:"childrenMenuList"
+        	children:"childrenMenuList",
+        	icon:"icon"
         },
         tabs: [{
           name: "首页",
