--- a/01SOURCE/vue/vuell/src/lib/css/base.css
+++ b/01SOURCE/vue/vuell/src/lib/css/base.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 }
 
 html,
@@ -9,66 +10,4 @@ form,
 top-container {
   width: 100%;
   height: 100%;
-}
-
-.ll-tabs {
-  height: 100%;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  /* Firefox */
-  -webkit-box-sizing: border-box;
-  /* Safari */
-}
-.el-container .el-main,.el-container .el-header{
-  margin:0;
-  padding:0;
-} 
-.el-tabs__content {
-  height: calc(100% - 41px);
-  box-sizing: border-box;
-  overflow: hidden;
-  -moz-box-sizing: border-box;
-  /* Firefox */
-  -webkit-box-sizing: border-box;
-  /* Safari */
-}
-.el-tabs__header{
-  margin: 0 0 0px;
-}
-
-.el-form-item{
-  width:100%;
-}
-.el-form-item__content{
-  /* width:-webkit-calc(100% - 100px); 
-  width:-moz-calc(100% - 100px); 
-  width:calc(100% - 100px);  */
-  white-space:nowrap;
-  text-overflow:ellipsis;
-}
-.el-input__inner{
-  height:30px;
-  line-height: 30px;
-}
-.el-form-item{
-  margin-bottom: 15px;
-}
-.el-form--label-top .el-form-item__label {
-  padding: 0 0 0px; 
-  line-height: 20px;
-}
-.el-card {
-  border: 0px solid #ebeef5; 
-}
-.el-card .el-card__header {
-  padding: 5px 10px;
-  border: 0px; 
-  background: #ebeef5;
-}
-
-.el-table td .cell{
-  white-space: nowrap;
-}
-.el-tabs--card>.el-tabs__header{
-  border-bottom: 1px solid #e4e7ed;
 }
