--- a/01SOURCE/vue/vuell/src/lib/css/base.less
+++ b/01SOURCE/vue/vuell/src/lib/css/base.less
@@ -21,3 +21,79 @@
 .el-table td {
     padding: 5px 0;
 }
+.el-card .el-card__body{
+    padding:0;
+    height: -moz-calc(100% - 31px);
+    height: -webkit-calc(100% - 31px);
+    height: calc(100% - 31px);
+}
+
+
+.ll-tabs {
+    height: 100%;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    /* Firefox */
+    -webkit-box-sizing: border-box;
+    /* Safari */
+  }
+  .el-container .el-main,.el-container .el-header{
+    margin:0;
+    padding:0;
+  } 
+  .el-tabs__content {
+    height: calc(100% - 41px);
+    box-sizing: border-box;
+    overflow: hidden;
+    -moz-box-sizing: border-box;
+    /* Firefox */
+    -webkit-box-sizing: border-box;
+    /* Safari */
+  }
+  .el-tabs__header{
+    margin: 0 0 0px;
+  }
+  
+  .el-form-item{
+    width:100%;
+  }
+  .el-form-item__content{
+    /* width:-webkit-calc(100% - 100px); 
+    width:-moz-calc(100% - 100px); 
+    width:calc(100% - 100px);  */
+    white-space:nowrap;
+    text-overflow:ellipsis;
+  }
+  .el-input__inner{
+    height:30px;
+    line-height: 30px;
+  }
+  .el-form-item{
+    margin-bottom: 15px;
+  }
+  .el-form--label-top .el-form-item__label {
+    padding: 0 0 0px; 
+    line-height: 20px;
+  }
+  .el-card {
+    border: 0px solid #ebeef5; 
+  }
+  .el-card .el-card__header {
+    padding: 5px 10px;
+    border: 0px; 
+    background: #ebeef5;
+  }
+  
+  .el-table td .cell{
+    white-space: nowrap;
+  }
+  .el-tabs--card>.el-tabs__header{
+    border-bottom: 1px solid #e4e7ed;
+  }
+
+  .ll-main-title{
+    font-size: 14px;
+}
+.ll-main-span{
+    font-size: 14px;
+}
