--- a/01SOURCE/vue/vuell/src/lib/css/base.less
+++ b/01SOURCE/vue/vuell/src/lib/css/base.less
@@ -58,6 +58,11 @@
   width:100%;
   margin-bottom: 15px;
 }
+.el-form-item {
+  .el-cascader{
+    width:100%;
+  }
+}
 .el-form-item__content{
   /* width:-webkit-calc(100% - 100px); 
   width:-moz-calc(100% - 100px); 
