--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/index/index.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/index/index.html
@@ -2,112 +2,99 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="utf-8">
-  <template th:replace="/base.html"></template>
+    <meta charset="utf-8">
+    <template th:replace="/base.html"></template>
 </head>
 
 <body>
-  <div id="app" style="height: 100%;width: 100%;">
-    <ll-container style="height: 100%; ">
-      <ll-header style="background-color:#eee;">Header</ll-header>
-      <ll-container>
-        <ll-aside width="200px" style="background-color:#272b2e">
-          <ll-nav-menu :items="items" @select="menuSelect" :props="menuProp" style="width: 199px;" background-color="#272b2e" 
-            text-color="#fff"></ll-nav-menu>
-        </ll-aside>
-        <ll-main style="padding: 0 0 0 0px;">
-          <ll-tabs v-model="activeTab" type="card" class="ll-tabs"  @edit="handleTabsEdit">
-            <ll-tab-pane name="首页" :closable="false" style="height: 100%;overflow: auto;">
-              <span slot="label"><i class="fa fa-home fa-fw"></i>首页</span> 
-            </ll-tab-pane>
-            <ll-tab-pane :key="item.name" v-for="(item, index) in tabs" :label="item.title" :name="item.name" :closable="item.closable==null?false:item.closable"
-              style="height: 100%;overflow: auto;">
-              <iframe :src="pageContextPath+item.link" style="height: 100%;width: 100%;display:block" frameborder='0' ></iframe>
-            </ll-tab-pane>
-          </ll-tabs>
-        </ll-main>
-      </ll-container>
-      <ll-footer style="height: 25px;">997820126@qq.com</ll-footer>
-    </ll-container>
-  </div>
+    <div id="app" style="height: 100%;width: 100%;">
+        <ll-container style="height: 100%; ">
+            <ll-header style="background-color:#eee;">Header</ll-header>
+            <ll-container>
+                <ll-aside width="200px" style="background-color:#272b2e">
+                    <ll-nav-menu :items="items" @select="menuSelect" :props="menuProp" style="width: 199px;"
+                        background-color="#272b2e" text-color="#fff"></ll-nav-menu>
+                </ll-aside>
+                <ll-main style="padding: 0 0 0 0px;">
+                    <ll-tabs v-model="activeTab" type="card" class="ll-tabs" @edit="handleTabsEdit">
+                        <ll-tab-pane name="首页" :closable="false" style="height: 100%;overflow: auto;">
+                            <span slot="label"><i class="fa fa-home fa-fw"></i>首页</span>
+                        </ll-tab-pane>
+                        <ll-tab-pane :key="item.name" v-for="(item, index) in tabs" :label="item.title" :name="item.name"
+                            :closable="item.closable==null?false:item.closable" style="height: 100%;overflow: auto;">
+                            <iframe :src="pageContextPath+item.link" style="height: 100%;width: 100%;display:block"
+                                frameborder='0'></iframe>
+                        </ll-tab-pane>
+                    </ll-tabs>
+                </ll-main>
+            </ll-container>
+            <ll-footer style="height: 25px;">997820126@qq.com</ll-footer>
+        </ll-container>
+    </div>
 
-  <script type="text/javascript">
-  var dataWrap=ajaxResponse.get("dataWrap");
-  
-    new Vue({
-      el: '#app',
-      methods: {
-   	  	menuSelect(index, indexPath, item){
-             if(!this.tabs.find(a=>a.name==item.name))
-             this.tabs.push({
-               name: item.name,
-               title: item.name,
-               closable:true,
-               link: item.link
-             });
-             this.activeTab = item.name;
-        },
-        handleTabsEdit(targetName, action) {
-          if (action === 'add') {
-            let newTabName = ++this.tabIndex + '';
-            this.editableTabs.push({
-              title: 'New Tab',
-              name: newTabName,
-              content: 'New Tab content'
-            });
-            this.activeTab = newTabName;
-          }
-          if (action === 'remove') {
-            let tabs = this.tabs;
-            let activeName = this.activeTab;
-            if (activeName === targetName) {
-              tabs.forEach((tab, index) => {
-                if (tab.name === targetName) {
-                  let nextTab = tabs[index + 1] || tabs[index - 1];
-                  if (nextTab) {
-                    activeName = nextTab.name;
-                  }
+    <script type="text/javascript">
+        var dataWrap = ajaxResponse.get("dataWrap");
+
+        var vm = new Vue({
+            el: '#app',
+            methods: {
+                menuSelect(index, indexPath, item) {
+                    this.addTab({
+                        name: item.name,
+                        title: item.name,
+                        closable: true,
+                        link: item.link
+                    });
+                },
+                addTab(setting) {
+                    if (!this.tabs.find(a => a.name == setting.name))
+                        this.tabs.push(setting);
+                    this.activeTab = setting.name;
+                },
+                handleTabsEdit(targetName, action) {
+                    if (action === 'add') {
+                        let newTabName = ++this.tabIndex + '';
+                        this.editableTabs.push({
+                            title: 'New Tab',
+                            name: newTabName,
+                            content: 'New Tab content'
+                        });
+                        this.activeTab = newTabName;
+                    }
+                    if (action === 'remove') {
+                        let tabs = this.tabs;
+                        let activeName = this.activeTab;
+                        if (activeName === targetName) {
+                            tabs.forEach((tab, index) => {
+                                if (tab.name === targetName) {
+                                    let nextTab = tabs[index + 1] || tabs[index - 1];
+                                    if (nextTab) {
+                                        activeName = nextTab.name;
+                                    }
+                                }
+                            });
+                        }
+
+                        this.activeTab = activeName;
+                        this.tabs = tabs.filter(tab => tab.name !== targetName);
+                    }
                 }
-              });
-            }
-
-            this.activeTab = activeName;
-            this.tabs = tabs.filter(tab => tab.name !== targetName);
-          }
-        }
-      },
-      data: {
-        activeTab: "首页",
-        pageContextPath:$$pageContextPath,
-        isCollapse: true,
-        menuProp:{
-        	id:"menuIndex",
-        	label:"name",
-        	children:"childrenMenuList",
-        	icon:"icon"
-        },
-        tabs: [],
-        tableData: [{
-            date: "2016-05-02",
-            name: "王小虎1",
-            address: "上海市普陀区金沙江路 1518 弄"
-          },
-          {
-            date: "2016-05-01",
-            name: "王小虎",
-            address: "上海市普陀区金沙江路 1519 弄"
-          },
-          {
-            date: "2016-05-03",
-            name: "王小虎",
-            address: "上海市普陀区金沙江路 1516 弄"
-          }
-        ],
-        items:dataWrap.dataList,
-      },
-    });
-
-  </script>
+            },
+            data: {
+                activeTab: "首页",
+                pageContextPath: $$pageContextPath,
+                isCollapse: true,
+                menuProp: {
+                    id: "menuIndex",
+                    label: "name",
+                    children: "childrenMenuList",
+                    icon: "icon"
+                },
+                tabs: [],
+                items: dataWrap.dataList,
+            },
+        });
+    </script>
 </body>
 
 </html>
