--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/base.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/base.html
@@ -8,6 +8,8 @@
 <script th:src="@{/js/framework/framework-common.js}" charset="utf-8"></script>
 <link rel="stylesheet" th:href="@{/css/base.css}" media="all" />
 <link rel="stylesheet" th:href="@{/plugins/font-awesome-4.7.0/css/font-awesome.min.css}" /> 
+<!-- 引入layer -->
+<script th:src="@{/plugins/layer-v3.1.1/layer/layer.js}" charset="utf-8"></script>
 <script  th:inline="javascript">
 	var $$pageContextPath = [[@{/}]];
 	var ajaxResponse=new _LL_Model.AjaxResponse([[${LLAjaxResponse}]]);
